[Android] Fix crash when closing tab during infobar cancellation

Cancelling the 'dangerous file' dialog could cause the current tab to be
closed, triggering the infobar to be deleted. The now deleted infobar
would then try to close itself after cancellation, causing a crash.

Also reworks InfoBarUtil to click infobar buttons directly rather than
through tap events, reducing flakiness.

BUG=615280
TEST=DownloadTest,GeolocationTest,InfoBarTest,InfoBarContainerTest

Review-Url: https://codereview.chromium.org/2019533002
Cr-Commit-Position: refs/heads/master@{#397017}

Former-commit-id: 0861c56c582da4866a84104dc5764a8adad84dd6